@@ -6,7 +6,13 @@
  */
 package com.clougence.clouddm.ds.tidb.sql.analysis.behavior;
 
-import java.util.*;
+import java.io.Reader;
+import java.io.StringReader;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Stream;
 
 import org.antlr.v4.runtime.Parser;
 import org.antlr.v4.runtime.ParserRuleContext;
@@ -14,6 +20,7 @@ import org.antlr.v4.runtime.tree.AbstractParseTreeVisitor;
 import org.antlr.v4.runtime.tree.ParseTree;
 
 import com.clougence.clouddm.ds.tidb.sql.parser.TiDBDslProvider;
+import com.clougence.clouddm.ds.tidb.sql.parser.TiSplitAnalysisSpi;
 import com.clougence.clouddm.ds.tidb.sql.parser.antlr.TiDBParserBaseVisitor;
 import com.clougence.clouddm.ds.tidb.sql.parser.antlr.TiDBParser.*;
 import com.clougence.clouddm.sdk.sql.analysis.behavior.*;
@@ -21,16 +28,23 @@ import com.clougence.clouddm.sdk.sql.parser.SplitQueryType;
 import com.clougence.dslpaser.antlr.DslHelper;
 import com.clougence.schema.umi.struts.UmiTypes;
 import com.clougence.sql.common.analysis.behavior.RdbBehaviorObjectFactory;
-import com.clougence.utils.StringUtils;
 
 public class TiBehaviorAnalysisSpi implements BehaviorAnalysisSpi {
     @Override
-    public List<StatementBehavior> analysisBehavior(String query, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
-        if (StringUtils.isBlank(query)) {
-            return Collections.emptyList();
-        }
+    public Stream<StatementBehavior> analysisBehaviorStream(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
+        var scripts = new TiSplitAnalysisSpi().splitScriptStream(queryReader, List.of(), baseLine, baseColumn);
+        return scripts.flatMap(script -> {
+            StringReader reader = new StringReader(script.getScript());
+            int codeLine = script.getBodyStartCodeLine();
+            int codeColumn = script.getBodyStartCodeColumn();
+
+            return analyzeStatement(reader, levels, codeLine, codeColumn).stream();
+        }).onClose(scripts::close);
+    }
+
+    private List<StatementBehavior> analyzeStatement(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
         TiBehaviorParserVisitor[] holder = new TiBehaviorParserVisitor[1];
-        DslHelper.doVisitor(TiDBDslProvider.INSTANCE, query, (lexer, parser) -> {
+        DslHelper.doVisitor(TiDBDslProvider.INSTANCE, queryReader, (lexer, parser) -> {
             holder[0] = new TiBehaviorParserVisitor(parser, levels, baseLine, baseColumn);
             return holder[0];
         });
@@ -81,6 +95,15 @@ final class TiStatementBehaviorVisitor extends TiDBParserBaseVisitor<Void> {
     }
 
     @Override
+    public Void visitFullDescribeStatement(FullDescribeStatementContext ctx) {
+        if (ctx.analyze != null) {
+            add(SplitQueryType.UNSAFE, BehaviorAction.UNSAFE, objects.instanceObject(TargetType.Instance, ctx.getStart()), List.of());
+            return null;
+        }
+        return visitChildren(ctx);
+    }
+
+    @Override
     public Void visitTableName(TableNameContext ctx) {
         add(SplitQueryType.SELECT, BehaviorAction.READ, table(ctx), List.of());
         return null;
@@ -111,13 +134,84 @@ final class TiStatementBehaviorVisitor extends TiDBParserBaseVisitor<Void> {
         return null;
     }
 
+    @Override
+    public Void visitInsertStatement(InsertStatementContext ctx) {
+        BehaviorRelation relation = add(SplitQueryType.INSERT, BehaviorAction.INSERT, table(ctx.tableName()), tables(ctx.insertStatementValue()));
+        setInsertRows(relation, ctx.insertStatementValue());
+        return null;
+    }
+
+    @Override
+    public Void visitReplaceStatement(ReplaceStatementContext ctx) {
+        BehaviorRelation relation = add(SplitQueryType.MERGE, BehaviorAction.MERGE, table(ctx.tableName()), tables(ctx.insertStatementValue()));
+        setInsertRows(relation, ctx.insertStatementValue());
+        return null;
+    }
+
+    @Override
+    public Void visitSingleUpdateStatement(SingleUpdateStatementContext ctx) {
+        add(SplitQueryType.UPDATE, BehaviorAction.UPDATE, table(ctx.tableName()), tables(ctx.whereClause()));
+        return null;
+    }
+
+    @Override
+    public Void visitSingleDeleteStatement(SingleDeleteStatementContext ctx) {
+        add(SplitQueryType.DELETE, BehaviorAction.DELETE, table(ctx.tableName()), tables(ctx.whereClause()));
+        return null;
+    }
+
+    @Override
+    public Void visitMultipleDeleteStatement(MultipleDeleteStatementContext ctx) {
+        List<BehaviorObject> sources = new ArrayList<>(tables(ctx.tableSources()));
+        sources.addAll(tables(ctx.expression()));
+        for (TableNameContext target : ctx.tableName()) {
+            add(SplitQueryType.DELETE, BehaviorAction.DELETE, table(resolveTarget(target, ctx.tableSources())), sources);
+        }
+        return null;
+    }
+
+    @Override
+    public Void visitMultipleUpdateStatement(MultipleUpdateStatementContext ctx) {
+        List<TableNameContext> sourceTables = descendants(ctx.tableSources(), TableNameContext.class);
+        if (!sourceTables.isEmpty()) {
+            List<BehaviorObject> sources = new ArrayList<>(tables(ctx.tableSources()));
+            sources.addAll(tables(ctx.whereClause()));
+            add(SplitQueryType.UPDATE, BehaviorAction.UPDATE, table(sourceTables.get(0)), sources);
+        }
+        return null;
+    }
+
     private void create(TableNameContext subject, List<TableNameContext> sources) {
         List<BehaviorObject> targets = sources.stream().map(this::table).filter(Objects::nonNull).toList();
         add(SplitQueryType.CREATE_TABLE, BehaviorAction.CREATE, table(subject), targets);
     }
 
+    private List<BehaviorObject> tables(ParseTree tree) {
+        return descendants(tree, TableNameContext.class).stream().map(this::table).filter(Objects::nonNull).toList();
+    }
+
+    private void setInsertRows(BehaviorRelation relation, InsertStatementValueContext value) {
+        if (relation == null || value == null) {
+            return;
+        }
+        List<CommentInsertValueContext> values = descendants(value, CommentInsertValueContext.class);
+        if (!values.isEmpty()) {
+            relation.setInsertRows((long) values.get(0).expressionsWithDefaults().size());
+        }
+    }
+
     private BehaviorObject table(TableNameContext context) {
         return context == null ? null : object(TargetType.Table, context.fullId());
+    }
+
+    private TableNameContext resolveTarget(TableNameContext target, TableSourcesContext sources) {
+        String targetName = text(target.fullId());
+        for (AtomTableItemContext source : descendants(sources, AtomTableItemContext.class)) {
+            if (source.aliasName() != null && targetName.equalsIgnoreCase(text(source.aliasName()))) {
+                return source.tableName();
+            }
+        }
+        return target;
     }
 
     private BehaviorObject object(TargetType type, FullIdContext context) {
@@ -136,9 +230,9 @@ final class TiStatementBehaviorVisitor extends TiDBParserBaseVisitor<Void> {
         return value.length() >= 2 && value.charAt(0) == '`' && value.charAt(value.length() - 1) == '`' ? value.substring(1, value.length() - 1) : value;
     }
 
-    private void add(SplitQueryType type, BehaviorAction action, BehaviorObject subject, List<BehaviorObject> targets) {
+    private BehaviorRelation add(SplitQueryType type, BehaviorAction action, BehaviorObject subject, List<BehaviorObject> targets) {
         if (subject == null) {
-            return;
+            return null;
         }
         BehaviorRelation relation = new BehaviorRelation();
         relation.setSubject(subject);
@@ -146,6 +240,7 @@ final class TiStatementBehaviorVisitor extends TiDBParserBaseVisitor<Void> {
         relation.getTarget().addAll(targets);
         behavior.getRelations().add(relation);
         behavior.setStatementType(type);
+        return relation;
     }
 
     private <T extends ParserRuleContext> List<T> descendants(ParseTree tree, Class<T> type) {
